--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,3 +97,18 @@ body {
       rgba(0, 0, 20, 0.9) 50%,
       rgba(0, 0, 50, 0.8) 100%);
 }
+
+.dotted-bg {
+  background-image: radial-gradient(#A0A0A0 0.5px, transparent 0.5px);
+  /* 使用非常小的點來模擬你需要的效果 */
+  /* background-size: 15px 15px; */
+  /* 增大間距，讓點之間更加寬鬆 */
+  /* color: #DDDDDF; */
+  /* 這個顏色用於影響點的顏色 */
+  background: linear-gradient(to bottom right, #ffff, #f3f4f6);
+}
+
+.dark .dotted-bg {
+  background-color: transparent;
+  background: radial-gradient(circle at center, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 20, 0.9) 50%, rgba(0, 0, 50, 0.8) 100%);
+}
