--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,3 +113,19 @@ body {
   background-color: transparent;
   background: radial-gradient(circle at center, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 20, 0.9) 50%, rgba(0, 0, 50, 0.8) 100%);
 }
+
+.form-text-field {
+  background-color: #e2e8f0;
+  padding: 2px 6px;
+  border-radius: 4px;
+  margin: 0 2px;
+  user-select: none;
+  cursor: pointer;
+  /* add border */
+  border: 1px solid #6096dd;
+}
+
+/* 暗色模式下的背景色 */
+.dark .form-text-field {
+  background-color: #374151;
+}
