--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,7 +114,8 @@ body {
   background: radial-gradient(circle at center, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 20, 0.9) 50%, rgba(0, 0, 50, 0.8) 100%);
 }
 
-.form-text-field {
+.form-text-field,
+.form-menu-field {
   background-color: #e2e8f0;
   padding: 2px 6px;
   border-radius: 4px;
@@ -128,4 +129,13 @@ body {
 /* 暗色模式下的背景色 */
 .dark .form-text-field {
   background-color: #374151;
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
