--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,16 +114,19 @@ body {
   background: radial-gradient(circle at center, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 20, 0.9) 50%, rgba(0, 0, 50, 0.8) 100%);
 }
 
+/* Editor */
 .form-text-field,
 .form-menu-field {
-  background-color: #e2e8f0;
-  padding: 2px 6px;
-  border-radius: 4px;
-  margin: 0 2px;
-  user-select: none;
-  cursor: pointer;
-  /* add border */
-  border: 1px solid #6096dd;
+  /* font-size: .8rem; */
+  display: inline-flex;       
+  align-items: center;        
+  background-color: #e2e8f0;  
+  padding: 0px 6px;           
+  border-radius: 4px;         
+  margin: 0 2px;             
+  user-select: none;         
+  cursor: pointer;            
+  border: 1px solid #6096dd;  
 }
 
 /* 暗色模式下的背景色 */
