--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ body {
     --secondary-foreground: 240 5.9% 10%;
     --muted: #96b0e4;
     --muted-foreground: 240 3.8% 46.1%;
-    --accent: #edf1fa;
+    --accent: #c9d5e8;
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
