--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,12 +106,12 @@ body {
   /* 增大間距，讓點之間更加寬鬆 */
   /* color: #DDDDDF; */
   /* 這個顏色用於影響點的顏色 */
-  background: linear-gradient(to bottom right, #ffff, #f3f4f6);
+  background-image: linear-gradient(to bottom right, #ffff, #f3f4f6);
 }
 
 .dark .dotted-bg {
   background-color: transparent;
-  background: radial-gradient(circle at center, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 20, 0.9) 50%, rgba(0, 0, 50, 0.8) 100%);
+  background-image: radial-gradient(circle at center, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 20, 0.9) 50%, rgba(0, 0, 50, 0.8) 100%);
 }
 
 /* Editor */
