--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,8 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
     --header-bg: rgba(255, 255, 255, 0.3);
+    --light: #edf1fa;
+    --third: #cad5f0;
   }
 
   .dark {
@@ -50,13 +52,13 @@ body {
     --card-foreground: 0 0% 98%;
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: #fff;
+    --primary: #1b3569;
     --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
+    --secondary: #6283bc;
     --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
+    --muted: #96aed4;
     --muted-foreground: 240 5% 64.9%;
-    --accent: #2b4369;
+    --accent: #96aed4;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
@@ -69,6 +71,9 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
     --header-bg: radial-gradient(circle at center, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 20, 0.9) 50%, rgba(0, 0, 50, 0.8) 100%);
+    /* --light: #96aed4; */
+    --light: #63738D; 
+    --third: #eae9fc;
   }
 }
 
@@ -217,7 +222,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.7);
+  margin-top:  10px;
+
   display: flex;
   justify-content: center;
   align-items: center;
