--- a/src/app/styles/editor.css
+++ b/src/app/styles/editor.css
@@ -1,6 +1,7 @@
 .editor-container {
   display: flex;
   flex-direction: column;
+  min-height: 12rem;
   height: calc(100vh - 18rem);
 
   .tiptap-container {
