Add ManWithPuzzleIcon and PuzzleIcon components with SVG paths
- Created ManWithPuzzleIcon component with SVG paths from public/assets/manWithPuzzle.svg, ensuring all fill attributes are replaced with currentColor for better styling control.
- Introduced PuzzleIcon component with a defined structure and SVG paths, allowing customizable width, height, and className for styling.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,7 @@ body {
     --chart-5: 340 75% 55%;
     --header-bg: radial-gradient(circle at center, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 20, 0.9) 50%, rgba(0, 0, 50, 0.8) 100%);
     /* --light: #96aed4; */
-    --light: #63738D; 
+    --light: #63738D;
     --third: #eae9fc;
   }
 }
@@ -136,15 +136,15 @@ body {
 .form-text-field,
 .form-menu-field {
   /* font-size: .8rem; */
-  display: inline-flex;       
-  align-items: center;        
-  background-color: #e2e8f0;  
-  padding: 0px 6px;           
-  border-radius: 4px;         
-  margin: 0 2px;             
-  user-select: none;         
-  cursor: pointer;            
-  border: 1px solid #6096dd;  
+  display: inline-flex;
+  align-items: center;
+  background-color: #e2e8f0;
+  padding: 0px 6px;
+  border-radius: 4px;
+  margin: 0 2px;
+  user-select: none;
+  cursor: pointer;
+  border: 1px solid #6096dd;
 }
 
 /* 暗色模式下的背景色 */
@@ -166,7 +166,7 @@ body {
   height: 1px;
   margin-bottom: 2rem;
   margin-left: auto;
-  margin-right: auto; 
+  margin-right: auto;
 }
 
 .animatedLine {
@@ -175,33 +175,37 @@ body {
   left: 0;
   width: 100%;
   height: 2px;
-  background: rgba(0,0,0,0.04);
+  background: rgba(0, 0, 0, 0.04);
   overflow: hidden;
 }
+
 .animatedLine:nth-child(1)::after {
-    animation-delay: -2s;
+  animation-delay: -2s;
 }
+
 .animatedLine::after {
-    content: '';
-    display: block;
-    position: absolute;
-    left: -150px;
-    top: 0;
-    width: 90px;
-    height: 2px;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #000000 75%, #000000 100%);
-    animation: animatedLine 8s 0s infinite;
-    animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
-    animation-fill-mode: forwards;
+  content: '';
+  display: block;
+  position: absolute;
+  left: -150px;
+  top: 0;
+  width: 90px;
+  height: 2px;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #000000 75%, #000000 100%);
+  animation: animatedLine 8s 0s infinite;
+  animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+  animation-fill-mode: forwards;
 }
 
 @keyframes animatedLine {
   0% {
     left: -150px;
   }
+
   60% {
     left: calc(100% + 150px);
   }
+
   100% {
     left: calc(100% + 150px);
   }
@@ -221,6 +225,7 @@ body {
   0% {
     background-position: 0%;
   }
+
   100% {
     background-position: 200%;
   }
@@ -235,7 +240,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  margin-top:  10px;
+  margin-top: 10px;
 
   display: flex;
   justify-content: center;
